# mimir-context-server

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  mimir-agent-policy.yaml  mimir-rules.yaml  mimir.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.mimir/approvals/: apr-6c971b3c.yaml  apr-703b2093.yaml  apr-8605cdf4.yaml
.mimir/project/: graph.db-shm  graph.db-wal
backstage-plugin/plugins/catalog-backend-module-mimir/: README.md  package-lock.json  package.json  tsconfig.json
backstage-plugin/plugins/catalog-backend-module-mimir/src/: config.ts  index.ts  module.ts
backstage-plugin/plugins/catalog-backend-module-mimir/src/provider/: MimirEntityProvider.ts  mapper.test.ts  mapper.ts  types.ts
client/: README.md  pyproject.toml
client/mimir_client/: __init__.py  cli.py  proxy.py
docs/: architecture.md  backstage.md  cli-reference.md  configuration.md  contributing.md  docker.md  guardrails.md  how-it-works.md  serving-modes.md  web-inspector.md  workspaces.md
mimir/: __init__.py  container.py
mimir/adapters/: cli.py  http_server.py  mcp_server.py
mimir/adapters/ci/: guardrails-action.yml
mimir/adapters/cli_support/: __init__.py  app.py  common.py
mimir/adapters/cli_support/commands/: guardrail.py  indexing.py  runtime.py  workspace.py
mimir/adapters/hooks/: pre_commit.sh
mimir/adapters/http/: __init__.py  admin_auth.py  app.py  routes_admin.py  routes_api.py  routes_mcp.py  state.py  tooling.py
mimir/adapters/mcp/: __init__.py  remote.py  server.py  stdio_dispatch.py  stdio_protocol.py
mimir/adapters/shared/: __init__.py  session_context.py
mimir/adapters/web/: app.py  routes.py  server.py  state.py
mimir/adapters/web/static/: index.html
mimir/adapters/web/static/css/: main.css
mimir/adapters/web/static/js/: api.js  app.js  utils.js
mimir/adapters/web/static/js/components/: dashboard.js  graph-viz.js  hotspots.js  nav.js  node-browser.js  quality.js  search.js
mimir/domain/: __init__.py  approvals.py  catalog.py  config.py  errors.py  feedback.py  graph.py  guardrails.py  guardrails_config.py  lang.py  models.py  session.py  subgraph.py  workspace.py
mimir/infra/: __init__.py
mimir/infra/embedders/: jina.py  local.py
mimir/infra/llm/: litellm_client.py
mimir/infra/parsers/: tree_sitter.py
mimir/infra/stores/: sqlite_feedback.py  sqlite_graph.py  sqlite_session.py
mimir/infra/vector_stores/: chroma.py  numpy_store.py
mimir/ports/: __init__.py  embedder.py  feedback_store.py  graph_store.py  llm_client.py  parser.py  session_store.py  vector_store.py
mimir/services/: _conventions.py  agent_policy.py  approval.py  catalog.py  feedback.py  graph_linker.py  guardrail.py  guardrail_report.py  hydration.py  impact.py  indexing.py  intent.py  quality.py  repo_sync.py  retrieval.py  session.py  summarizer.py  temporal.py  watcher.py  write_context.py
mimir/services/guardrail/: __init__.py  diff_analyzer.py  report.py  service.py  trailers.py
mimir/services/indexing/: __init__.py  builder.py  embedding_pipeline.py  refs.py  service.py
mimir/services/retrieval/: __init__.py  graph_ops.py  matching.py  service.py
tests/: test_agent_policy.py  test_approval_service.py  test_approvals_domain.py  test_diff_analyzer.py  test_guardrail_report.py  test_guardrail_service.py  test_guardrail_trailers.py  test_guardrails_domain.py  test_hydration.py  test_indexing_embedding.py  test_vector_stores.py
tests/adapters/: test_cli_adapter.py
tests/adapters/http/: test_http_admin_auth.py  test_http_state.py
tests/adapters/shared/: test_session_context.py
tests/domain/: test_guardrails_domain.py
tests/infra/: test_hydration.py  test_sqlite_feedback.py
tests/services/: test_catalog_service.py  test_feedback.py  test_feedback_integration.py  test_repo_sync.py  test_url_normalization.py
tests/services/guardrail/: test_diff_analyzer.py  test_guardrail_report.py  test_guardrail_service.py  test_guardrail_trailers.py
tests/services/indexing/: test_api_endpoint.py  test_indexing_incremental.py  test_indexing_integration.py
tests/services/retrieval/: test_route_search.py
