[build-system]
requires = ["setuptools>=68.0", "wheel>=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-context-server"
version = "1.0.0"
description = "Mimir — Context Server: intelligent code context engine for LLMs working with large, multi-repo codebases"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "networkx>=3.5",
    "gitpython>=3.1",
    "typer>=0.15",
    "tomli>=2.2",
    "chromadb>=1.5",
    "pydantic-settings>=2.0",
    "sentence-transformers>=4.1",
    "litellm>=1.68",
    "mcp>=1.26",
    "numpy>=2.2",
    "tree-sitter>=0.25",
    "aiohttp>=3.11",
    "tiktoken>=0.9",
    "rank-bm25>=0.2",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
]
lsp = [
    "multilspy>=0.2",
]

[project.scripts]
mimir = "mimir.adapters.cli:app"

[tool.setuptools.packages.find]
include = ["mimir*"]

[tool.setuptools.package-data]
"mimir.adapters.web" = ["static/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
