[build-system]
requires = ["setuptools>=68.0", "wheel>=0.46", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-context-server"
dynamic = ["version"]
description = "Mimir — Context Server: intelligent code context engine for LLMs working with large, multi-repo codebases"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "context", "code", "llm", "rag", "code-graph", "embeddings", "mimir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "networkx>=3.5",
    "gitpython>=3.1",
    "typer>=0.15",
    "tomli>=2.2",
    "chromadb>=1.5",
    "pydantic-settings>=2.0",
    "sentence-transformers>=4.1",
    "litellm>=1.68",
    "mcp>=1.26",
    "numpy>=2.2",
    "tree-sitter>=0.25",
    "tree-sitter-language-pack>=0.9",
    "aiohttp>=3.11",
    "tiktoken>=0.9",
    "rank-bm25>=0.2",
    "rich>=14.0",
    "watchdog>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
]
lsp = [
    "multilspy>=0.2",
]

[project.urls]
Homepage = "https://github.com/repfly/mimir"
Repository = "https://github.com/repfly/mimir"
Issues = "https://github.com/repfly/mimir/issues"

[project.scripts]
mimir = "mimir.adapters.cli:app"

[tool.setuptools.packages.find]
include = ["mimir*"]

[tool.setuptools.package-data]
"mimir.adapters.web" = ["static/**/*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
