[build-system]
requires = ["setuptools>=68.0", "wheel>=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "mimir-client"
version = "1.0.0"
description = "Lightweight MCP proxy client for remote Mimir context servers — no repos, no models, no indexing needed"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "context", "code", "llm", "proxy", "mimir"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]

dependencies = [
    "aiohttp>=3.9",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/repfly/mimir"
Repository = "https://github.com/repfly/mimir"
Issues = "https://github.com/repfly/mimir/issues"

[project.scripts]
mimir-client = "mimir_client.cli:main"

[tool.setuptools.packages.find]
include = ["mimir_client*"]
